--- a/mlruns/735381019777954897/eb5c47f7944d4c9382b59a7fb7de89a9/meta.yaml
+++ b/mlruns/735381019777954897/eb5c47f7944d4c9382b59a7fb7de89a9/meta.yaml
@@ -1,10 +1,12 @@
 artifact_uri: mlflow-artifacts:/735381019777954897/eb5c47f7944d4c9382b59a7fb7de89a9/artifacts
+deleted_time: 1758163738536
 end_time: 1758115076122
 entry_point_name: ''
 experiment_id: '735381019777954897'
-lifecycle_stage: active
+lifecycle_stage: deleted
 run_id: eb5c47f7944d4c9382b59a7fb7de89a9
 run_name: gentle-rook-674
+run_uuid: eb5c47f7944d4c9382b59a7fb7de89a9
 source_name: ''
 source_type: 4
 source_version: ''
